--- a/srv/package.json
+++ b/srv/package.json
@@ -1,9 +1,13 @@
 {
+  "engines": {
+    "node": "~12.0.0"
+  },
   "dependencies": {
     "@sap/xsenv": "latest",
     "ws": "^7.0.1",
     "express": "~4.16.4",
     "stringify-object": "latest",
+    "webln": "0.3.0",
     "nodemon": "latest"
   },
   "description": "websocket chat server",
